fixed capitalization of author

--- a/reading.html
+++ b/reading.html
@@ -42,7 +42,7 @@
 august 2024:<br>
 <i>zero to one</i> | peter thiel <br>     
 <i>yellowface</i> | r.f. kuang <br>     
-<i>tomorrow, and tomorrow, and tomorrow</i> | Gabrielle Zevin<br>     
+<i>tomorrow, and tomorrow, and tomorrow</i> | gabrielle zevin<br>     
 <i>crying in h-mart</i> | michelle zauner<br>        
 <i>eclipse</i> | wilder poetry<br>
 <br>
