--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <link rel="stylesheet" href="assets/style-2.css">
       
     <title>Tony Wang</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EF518STZBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EF518STZBY');
+</script> 
+
+
+
+    
   </head>
   <body>
     <!-- <h1>Hello, world!</h1> -->
