--- a/index.html
+++ b/index.html
@@ -24,13 +24,8 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-EF518STZBY');
-</script> 
-
-
-
-    
+</script>     
   </head>
   <body>
     <!-- <h1>Hello, world!</h1> -->
@@ -49,7 +44,7 @@
                 </div>
             </div>
             <div class="col-md-8 pt-5 about">
-                 👋 Hi! I'm Tony, a CS undergrad at Stanford. 
+                 <!-- 👋 Hi! I'm Tony, a CS undergrad at Stanford. 
                  <br> <br>
                  🌲 In college, I served as Frosh Council President, where I led representatives across all 24 dorms to connect the Class of 2027. I also run <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, and have consulted for <a class="in-text" href="https://azure.microsoft.com/en-us" target="_blank">Microsoft Azure</a> and <a class="in-text" href="https://fizzsocial.app/" target="_blank">Fizz</a>. 
                  <br> <br>
@@ -63,7 +58,38 @@
                      target="_blank">GitHub</a>, or shoot me an email at <a class="in-text" href="mailto:wangtony@stanford.edu">wangtony@stanford.edu</a>. You can also stalk me on <a class="in-text" href="https://www.goodreads.com/user/show/166170696-tony"
                      target="_blank">Goodreads</a>, <a class="in-text" href="https://open.spotify.com/user/fnebs6do5y2vgn94h29zqi2mm"
                      target="_blank">Spotify</a>, or <a class="in-text" href="https://www.instagram.com/tony_.wang/"
-                     target="_blank">Instagram</a>. I’d love to chat! 🚀
+                     target="_blank">Instagram</a>. I’d love to chat! 🚀 -->
+
+                     <p>
+                      As a self-taught engineer, I co-founded an AI privacy tool backed by Pear Garage and Ripple Ventures. 
+                      I’ve done AI research at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a> 
+                      and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded 
+                      <a class="in-text" href="https://www.acsef.org/slb" target="_blank">ACSEF SLB</a>, a nonprofit opening research pathways 
+                      for 100+ Title I schools.
+                  </p>
+                  <p>
+                      On campus, I lead <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, 
+                      <a class="in-text" href="https://www.acm.org/" target="_blank">ACM</a>, and 
+                      <a class="in-text" href="https://www.spba.org/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
+                      Previously, I served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
+                      I’m a Paragon Policy Fellow, Rise Global Winner, and Coca-Cola Scholar.
+                  </p>
+                  <p>
+                      In a past life, I wrote award-winning <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 
+                      and competed internationally with <a class="in-text" href="https://usawkf.org/usa-team/#2022" target="_blank">Kungfu Team USA</a>. 
+                      I’m based in the Bay Area.
+                  </p>
+                  <p>
+                      <a class="in-text" href="https://twitter.com/TonyW__" target="_blank">Twitter</a> | 
+                      <a class="in-text" href="https://www.linkedin.com/in/tony-wang-/" target="_blank">LinkedIn</a> | 
+                      <a class="in-text" href="https://github.com/tonywangs" target="_blank">GitHub</a> | 
+                      <a class="in-text" href="https://www.instagram.com/tony_.wang/" target="_blank">Instagram</a> | 
+                      <a class="in-text" href="https://www.goodreads.com/user/show/166170696-tony" target="_blank">Goodreads</a> | 
+                      <a class="in-text" href="https://open.spotify.com/user/fnebs6do5y2vgn94h29zqi2mm" target="_blank">Spotify</a>
+                  </p>
+                  <p>
+                      📩 <a class="in-text" href="mailto:wangtony@stanford.edu">wangtony@stanford.edu</a>
+                  </p>
             </div>
         </div>
     </div>
