--- a/index.html
+++ b/index.html
@@ -26,70 +26,47 @@
   gtag('js', new Date());
   gtag('config', 'G-EF518STZBY');
 </script>     
+
+    <!-- Add this line after your other link tags -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- <h1>Hello, world!</h1> -->
-    <div class="container pt-5 allstuffp">
-        <div class="row pt-5 allstuff">
-            <div class="col-md-4 pt-5">
-                <div class="fixed-posi">
+    <div class="container pt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 pt-5">
                 <p class="name">Tony Wang</p>
-                <img src="images/headshot_cropped.jpg" class="profilepic pt-3 pb-2">
-                <div class="col-md-6 pt-5 about">
-                <a href="reading.html">Library</a>
+                <div class="pt-3 text-left">
+                    <p>
+                        As a self-taught engineer, I co-founded an AI privacy tool backed by Pear Garage and Ripple Ventures. 
+                        I’ve done AI research at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a> 
+                        and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded 
+                        <a class="in-text" href="https://www.acsef.org/slb" target="_blank">ACSEF SLB</a>, a nonprofit opening research pathways 
+                        for 100+ Title I schools.
+                    </p>
+                    <p>
+                        On campus, I lead <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, 
+                        <a class="in-text" href="https://www.acm.org/" target="_blank">ACM</a>, and 
+                        <a class="in-text" href="https://www.spba.org/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
+                        Previously, I served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
+                        I’m a Paragon Policy Fellow, Rise Global Winner, and Coca-Cola Scholar.
+                    </p>
+                    <p>
+                        In a past life, I wrote award-winning <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 
+                        and competed internationally with <a class="in-text" href="https://usawkf.org/usa-team/#2022" target="_blank">Kungfu Team USA</a>. 
+                        I’m based in the Bay Area.
+                    </p>
+                    <p>
+                        <a class="in-text" href="https://twitter.com/TonyW__" target="_blank">Twitter</a> | 
+                        <a class="in-text" href="https://www.linkedin.com/in/tony-wang-/" target="_blank">LinkedIn</a> | 
+                        <a class="in-text" href="https://github.com/tonywangs" target="_blank">GitHub</a> | 
+                        <a class="in-text" href="https://www.instagram.com/tony_.wang/" target="_blank">Instagram</a> | 
+                        <a class="in-text" href="https://www.goodreads.com/user/show/166170696-tony" target="_blank">Goodreads</a> | 
+                        <a class="in-text" href="https://open.spotify.com/user/fnebs6do5y2vgn94h29zqi2mm" target="_blank">Spotify</a>
+                    </p>
+                    <p>
+                        📩 <a class="in-text" href="mailto:wangtony@stanford.edu">wangtony@stanford.edu</a>
+                    </p>
                 </div>
-                <!-- <div class="pt-5">usercontext</div> -->
-                <!-- <div class="">travel history</div> -->
-                <!-- <div class="">this template</div> -->
-                </div>
-            </div>
-            <div class="col-md-8 pt-5 about">
-                 <!-- 👋 Hi! I'm Tony, a CS undergrad at Stanford. 
-                 <br> <br>
-                 🌲 In college, I served as Frosh Council President, where I led representatives across all 24 dorms to connect the Class of 2027. I also run <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, and have consulted for <a class="in-text" href="https://azure.microsoft.com/en-us" target="_blank">Microsoft Azure</a> and <a class="in-text" href="https://fizzsocial.app/" target="_blank">Fizz</a>. 
-                 <br> <br>
-                 🧠 Previously, I worked ML roles at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab 126</a>, <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">Kundaje Lab</a> at SAIL, <a class="in-text" href="https://med.stanford.edu/seanwulab.html" target="_blank">Sean Wu Lab</a> at Stanford Medical School, Harvard TH Chan School of Public Health, and <a class="in-text" href="https://prtrm.uta.edu/" target="_blank">PRTRM Lab</a> at UTA. I also founded the <a class="in-text" href="https://www.acsef.org/slb" target="_blank">ACSEF SLB</a> ❤️, a student-led nonprofit that creates research programs for 100+ Title I schools.  
-                 <br> <br>
-                 In my free time, I love trying coffee shops ☕, writing <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 🖋, and teaching <a class="in-text" href="https://usawkf.org/usa-team/#2022" target="_blank">Kungfu Team USA</a> 🔥.
-                 <br> <br>
-                 You can find me on <a class="in-text" href="https://twitter.com/TonyW__"
-                     target="_blank">X</a>, <a class="in-text" href="https://www.linkedin.com/in/tony-wang-/"
-                     target="_blank">LinkedIn</a>, <a class="in-text" href="https://github.com/tonywangs"
-                     target="_blank">GitHub</a>, or shoot me an email at <a class="in-text" href="mailto:wangtony@stanford.edu">wangtony@stanford.edu</a>. You can also stalk me on <a class="in-text" href="https://www.goodreads.com/user/show/166170696-tony"
-                     target="_blank">Goodreads</a>, <a class="in-text" href="https://open.spotify.com/user/fnebs6do5y2vgn94h29zqi2mm"
-                     target="_blank">Spotify</a>, or <a class="in-text" href="https://www.instagram.com/tony_.wang/"
-                     target="_blank">Instagram</a>. I’d love to chat! 🚀 -->
-
-                     <p>
-                      As a self-taught engineer, I co-founded an AI privacy tool backed by Pear Garage and Ripple Ventures. 
-                      I’ve done AI research at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a> 
-                      and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded 
-                      <a class="in-text" href="https://www.acsef.org/slb" target="_blank">ACSEF SLB</a>, a nonprofit opening research pathways 
-                      for 100+ Title I schools.
-                  </p>
-                  <p>
-                      On campus, I lead <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, 
-                      <a class="in-text" href="https://www.acm.org/" target="_blank">ACM</a>, and 
-                      <a class="in-text" href="https://www.spba.org/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
-                      Previously, I served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
-                      I’m a Paragon Policy Fellow, Rise Global Winner, and Coca-Cola Scholar.
-                  </p>
-                  <p>
-                      In a past life, I wrote award-winning <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 
-                      and competed internationally with <a class="in-text" href="https://usawkf.org/usa-team/#2022" target="_blank">Kungfu Team USA</a>. 
-                      I’m based in the Bay Area.
-                  </p>
-                  <p>
-                      <a class="in-text" href="https://twitter.com/TonyW__" target="_blank">Twitter</a> | 
-                      <a class="in-text" href="https://www.linkedin.com/in/tony-wang-/" target="_blank">LinkedIn</a> | 
-                      <a class="in-text" href="https://github.com/tonywangs" target="_blank">GitHub</a> | 
-                      <a class="in-text" href="https://www.instagram.com/tony_.wang/" target="_blank">Instagram</a> | 
-                      <a class="in-text" href="https://www.goodreads.com/user/show/166170696-tony" target="_blank">Goodreads</a> | 
-                      <a class="in-text" href="https://open.spotify.com/user/fnebs6do5y2vgn94h29zqi2mm" target="_blank">Spotify</a>
-                  </p>
-                  <p>
-                      📩 <a class="in-text" href="mailto:wangtony@stanford.edu">wangtony@stanford.edu</a>
-                  </p>
             </div>
         </div>
     </div>
@@ -101,5 +78,13 @@
     <script src="assets/style-2.js"></script>
 </body>
   <style>
+  .name {
+    font-size: 2rem;
+    margin-top: 2rem;
+  }
+
+  .col-md-8 {
+    margin: 0 auto;
+  }
   </style>
 </html>
