--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style-2.css">
       
-    <title>Tony Wang</title>
+    <title>Hey, I'm Tony Wang!</title>
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EF518STZBY"></script>
@@ -37,7 +37,7 @@
                 <p class="name">Tony Wang</p>
                 <div class="pt-3 text-left">
                     <p>
-                        As a self-taught engineer, I co-founded an AI privacy tool backed by Pear Garage and Ripple Ventures. 
+                        I recently co-founded an AI privacy startup backed by Pear Garage and Ripple Ventures. 
                         I’ve done AI research at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a> 
                         and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded 
                         <a class="in-text" href="https://www.acsef.org/slb" target="_blank">ACSEF SLB</a>, a nonprofit opening research pathways 
@@ -45,10 +45,10 @@
                     </p>
                     <p>
                         On campus, I lead <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, 
-                        <a class="in-text" href="https://www.acm.org/" target="_blank">ACM</a>, and 
-                        <a class="in-text" href="https://www.spba.org/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
+                        <a class="in-text" href="https://www.stanfordacm.org/" target="_blank">ACM</a>, and 
+                        <a class="in-text" href="https://spba.sites.stanford.edu/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
                         Previously, I served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
-                        I’m a Paragon Policy Fellow, Rise Global Winner, and Coca-Cola Scholar.
+                        I’m a <a class="in-text" href="https://www.paragonfellowship.org/" target="_blank">Paragon Policy Fellow</a>, <a class="in-text" href="https://www.risefortheworld.org/winners/tony-wang/" target="_blank">Rise Global Winner</a>, and <a class="in-text" href="https://www.coca-colascholarsfoundation.org/about/2023-scholar-bios/" target="_blank">Coca-Cola Scholar</a>.
                     </p>
                     <p>
                         In a past life, I wrote award-winning <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 
