--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style-2.css">
       
-    <title>Hey, I'm Tony Wang!</title>
+    <title>Tony Wang</title>
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EF518STZBY"></script>
@@ -34,7 +34,7 @@
     <div class="container pt-5">
         <div class="row justify-content-center">
             <div class="col-md-8 pt-5">
-                <p class="name">Tony Wang</p>
+                <p class="name">Hey, I'm Tony Wang!</p>
                 <div class="pt-3 text-left">
                     <p>
                         I recently co-founded an AI privacy startup backed by Pear Garage and Ripple Ventures. 
