updating main page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 <p class="name">Hey, I'm Tony Wang!</p>
                 <div class="pt-3 text-left">
                     <p>
-                        I recently co-founded an AI privacy startup backed by Pear Garage and Ripple Ventures. 
-                        I’ve done AI research at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a> 
-                        and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded 
-                        <a class="in-text" href="https://www.acsef.org/slb" target="_blank">ACSEF SLB</a>, a nonprofit opening research pathways 
+                        I helped build an AI privacy tool supported by Pear Garage and Ripple Ventures. 
+                        I’ve interned at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a>, 
+                        <a class="in-text" href="https://scale.com/" target="_blank">Scale AI</a>, 
+                        and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded a 
+                        <a class="in-text" href="https://www.acsef.org/slb" target="_blank">nonprofit</a>, opening research pathways 
                         for 100+ Title I schools.
                     </p>
                     <p>
@@ -48,11 +49,11 @@
                         <a class="in-text" href="https://www.stanfordacm.org/" target="_blank">ACM</a>, and 
                         <a class="in-text" href="https://spba.sites.stanford.edu/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
                         Previously, I served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
-                        I’m a <a class="in-text" href="https://www.paragonfellowship.org/" target="_blank">Paragon Policy Fellow</a>, <a class="in-text" href="https://www.risefortheworld.org/winners/tony-wang/" target="_blank">Rise Global Winner</a>, and <a class="in-text" href="https://www.coca-colascholarsfoundation.org/about/2023-scholar-bios/" target="_blank">Coca-Cola Scholar</a>.
+                        I’m a <a class="in-text" href="https://www.paragonfellowship.org/" target="_blank">Paragon Policy Fellow</a>, <a class="in-text" href="https://www.risefortheworld.org/winners/tony-wang/" target="_blank">Rise Fellow</a>, and <a class="in-text" href="https://www.coca-colascholarsfoundation.org/about/2023-scholar-bios/" target="_blank">Coke Scholar</a>.
                     </p>
                     <p>
                         In a past life, I wrote award-winning <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 
-                        and competed internationally with <a class="in-text" href="https://usawkf.org/usa-team/#2022" target="_blank">Kungfu Team USA</a>. 
+                        and competed internationally on <a class="in-text" href="https://usawkf.org/usa-team/#2022" target="_blank">Kungfu Team USA</a>. 
                         I’m based in the Bay Area.
                     </p>
                     <p>
