updating main page again

--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
     <div class="container pt-5">
         <div class="row justify-content-center">
             <div class="col-md-8 pt-5">
-                <p class="name">Hey, I'm Tony Wang!</p>
+                <p class="name">Hey, I'm Tony.</p>
                 <div class="pt-3 text-left">
                     <p>
                         I helped build an AI privacy tool supported by Pear Garage and Ripple Ventures. 
                         I’ve interned at <a class="in-text" href="https://amazon.jobs/en/teams/lab126/" target="_blank">Amazon Lab126</a>, 
                         <a class="in-text" href="https://scale.com/" target="_blank">Scale AI</a>, 
                         and <a class="in-text" href="https://kundajelab.stanford.edu/" target="_blank">SAIL</a>, and founded a 
-                        <a class="in-text" href="https://www.acsef.org/slb" target="_blank">nonprofit</a>, opening research pathways 
-                        for 100+ Title I schools.
+                        <a class="in-text" href="https://www.acsef.org/slb" target="_blank">nonprofit</a> opening research pathways for 100+ Title I schools.
                     </p>
                     <p>
                         On campus, I lead <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, 
