updated main page again

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <p>
                         On campus, I lead <a class="in-text" href="https://www.treehacks.com/" target="_blank">TreeHacks</a>, 
                         <a class="in-text" href="https://www.stanfordacm.org/" target="_blank">ACM</a>, and 
-                        <a class="in-text" href="https://spba.sites.stanford.edu/" target="_blank">SPBA</a>, bringing communities together to build and grow. 
-                        Previously, I served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
-                        I’m a <a class="in-text" href="https://www.paragonfellowship.org/" target="_blank">Paragon Policy Fellow</a>, <a class="in-text" href="https://www.risefortheworld.org/winners/tony-wang/" target="_blank">Rise Fellow</a>, and <a class="in-text" href="https://www.coca-colascholarsfoundation.org/about/2023-scholar-bios/" target="_blank">Coke Scholar</a>.
+                        <a class="in-text" href="https://spba.sites.stanford.edu/" target="_blank">SPBA</a>, and 
+                        previously served as Stanford’s Freshman Class President, uniting the Class of 2027 across 24 dorms. 
+                        I’m a <a class="in-text" href="https://www.paragonfellowship.org/" target="_blank">Paragon Fellow</a>, <a class="in-text" href="https://www.risefortheworld.org/winners/tony-wang/" target="_blank">Rise Fellow</a>, and <a class="in-text" href="https://www.coca-colascholarsfoundation.org/about/2023-scholar-bios/" target="_blank">Coke Scholar</a>.
                     </p>
                     <p>
                         In a past life, I wrote award-winning <a class="in-text" href="https://terrorhousemag.com/elegy/" target="_blank">poetry</a> 
