updated reading list

--- a/reading.html
+++ b/reading.html
@@ -39,6 +39,13 @@
             </div>
             <div class="col-md-8 pt-5 about">
 
+december 2024:<br>
+<i>the dark forest</i> | cixin liu <br>  
+<br>
+november 2024:<br>
+<i>spies, lies, and algorithms: the history and future of american intelligence</i> | amy zegart <br> 
+<i>know my name</i> | chanel miller <br>  
+<br>
 august 2024:<br>
 <i>zero to one</i> | peter thiel <br>     
 <i>yellowface</i> | r.f. kuang <br>     
