Apply stash (GA4 + style tweaks)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G‑EF518STZBY"></script>
+  <script src="assets/js/analytics.js"></script>
+
   <link rel="icon" href="images/teal-slash-favicon.png">
   <title>TONY WANG</title>
 
@@ -43,7 +46,7 @@
           <h1 id="nameHeader"><b>TONY WANG</b></h1>
           
         </div>
-        <p class="p-padding" id="nameContent"> <b> studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">psych</a> @ stanford </b> </p>
+        <p class="p-padding" id="nameContent"> <b> studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">psych</a> @ stanford</b> </p>
 
       <br>
       
@@ -85,7 +88,9 @@
 
         <!-- coding -->
         <p id="codingHeader">$ ls ~/coding</p>
-        <img id = "github-chart"src="https://ghchart.rshah.org/ff64da/tonywangs" alt="github commits" width="90%" />
+        <a href="https://github.com/tonywangs" target="_blank" rel="noopener noreferrer">
+        <img id="github-chart" src="https://ghchart.rshah.org/ff64da/tonywangs" alt="github commits" width="90%" />
+        </a>
 
       </div>
 
