--- a/reading.html
+++ b/reading.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G‑EF518STZBY"></script>
+  <script src="assets/js/analytics.js"></script>
+
   <link rel="icon" href="images/teal-slash-favicon.png">
   <title>tony wang</title>
   <link rel="stylesheet" href="assets/css/styles.css">
@@ -40,7 +44,7 @@
       <p class="p-padding"><b>studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">psych</a> @ stanford</b></p>
       
         <div class="p-body">
-            <h3 id = "readingHeader"><b>reading</b></h3>
+            <h3 id = "readingHeader"><b>READING</b></h3>
             <p id="goodreadsLine"> add me on  <a href="https://www.goodreads.com/user/show/166170696-tony">goodreads</a> to see full reviews </p>
             
             <div id="readingList">
@@ -56,6 +60,7 @@
               <p><i> flowers on the moon </i> | billy chapata</p>
               <p><i> the analects </i> | confucius</p>
               <p><i> a ballad of songbirds and snakes </i> | suzanne collins</p>
+              <p><i> home body </i> | rupi kaur</p>
               <br>
 
               <p><b> 2024 </b></p>
@@ -83,7 +88,7 @@
               <p><i> educated </i> | tara westover</p>
               <br>
 
-              <p><b> 2023 </b></p>
+              <p><b> 2022 - 2023 </b></p>
               <p><i> this is water: some thoughts, delivered on a significant occasion, about living a compassionate life </i> | david foster wallace</p>
               <p><i> ozymandias </i> | percy bysshe shelley</p>
               <p><i> the road not taken and other poems </i> | robert frost</p>
@@ -104,9 +109,6 @@
               <p><i> dune </i> | frank herbert</p>
               <p><i> when breath becomes air </i> | paul kalanithi</p>
               <p><i> the scout mindset: why some people see things clearly and others don't </i> | julia galef</p>
-              <br>
-
-              <p><b> 2022 - 2023 </b></p>
               <p><i> the song of achilles </i> | madeline miller</p>
               <p><i> the sun is also a star </i> | nicola yoon</p>
               <p><i> this book is gay </i> | juno dawson </p>
