--- a/writing.html
+++ b/writing.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G‑EF518STZBY"></script>
+  <script src="assets/js/analytics.js"></script>
+
   <link rel="icon" href="images/teal-slash-favicon.png">
   <title>tony wang</title>
   <link rel="stylesheet" href="assets/css/styles.css">
@@ -35,12 +39,12 @@
     </div>
     <div class="content">
       <div class="big-name">
-        <h1><b>tony wang</b></h1>
+        <h1><b>TONY WANG</b></h1>
       </div>
       <p class="p-padding"><b>studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">psych</a> @ stanford</b></p>
       
         <div class="p-body">
-            <h3 id = "readingHeader"><b>writing</b></h3>
+            <h3 id = "readingHeader"><b>WRITING</b></h3>
             
             <div id="readingList">
             <hr style="border: 0; height: 1px; background-color: #563D25; margin: 20px 0;">
