updated reading list

--- a/reading.html
+++ b/reading.html
@@ -52,6 +52,8 @@
               <br>
 
               <p><b> 2025 </b></p>
+              <p><i> chip war: the fight for the world's most critical technology </i> | chris miller</p>
+              <p><i> hope for cynics: the surprising science of human goodness </i> | jamil zaki</p>
               <p><i> death's end </i> | cixin liu</p>
               <p><i> make believe: poems for hoping again </i> | victoria hutchins</p>
               <p><i> sunrise on the reaping </i> | suzanne collins</p>
