updated reading list

--- a/reading.html
+++ b/reading.html
@@ -55,6 +55,7 @@
               <p><i> chip war: the fight for the world's most critical technology </i> | chris miller</p>
               <p><i> hope for cynics: the surprising science of human goodness </i> | jamil zaki</p>
               <p><i> death's end </i> | cixin liu</p>
+              <p><i> the happiness hypothesis </i> | jonathan haidt</p>
               <p><i> make believe: poems for hoping again </i> | victoria hutchins</p>
               <p><i> sunrise on the reaping </i> | suzanne collins</p>
               <p><i> charlie y la fábrica de chocolate </i> | roald dahl</p>
