Update personal website content

--- a/reading.html
+++ b/reading.html
@@ -23,7 +23,8 @@
           <a href="javascript:void(0)" class="menu-btn"><i class="fas fa-chevron-right"></i> ./pages</a>
           <div class="menu-content">
             <a href="./reading.html" class="branch">└── reading.md</a>
-            <a href="./writing.html" class="branch-end">└── writing.md</a>
+            <a href="./writing.html" class="branch">└── writing.md</a>
+            <a href="./projects.html" class="branch-end">└── projects.html</a>
           </div>
         </li>
         <li class="menu">
@@ -41,11 +42,11 @@
       <div class="big-name">
         <h1><b>TONY WANG</b></h1>
       </div>
-      <p class="p-padding"><b><span style="color: #ff64da;">></span> studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">psych</a> @ stanford</b></p>
+      <p class="p-padding"><b><span style="color: #ff64da;">></span> studying <a href="https://github.com/tonywangs">cs</a> + <a href="https://sumo.stanford.edu/proco/">math</a> @ stanford</b></p>
       
         <div class="p-body">
             <h3 id = "readingHeader"><b>READING</b></h3>
-            <p id="goodreadsLine"> add me on  <a href="https://www.goodreads.com/user/show/166170696-tony">goodreads</a> to see full reviews </p>
+            <!-- <p id="goodreadsLine"> add me on  <a href="https://www.goodreads.com/user/show/166170696-tony">goodreads</a> to see full reviews </p> -->
             
             <div id="readingList">
             <hr style="border: 0; height: 1px; background-color: #563D25; margin: 20px 0;">
@@ -115,9 +116,6 @@
               <p><i> the song of achilles </i> | madeline miller</p>
               <p><i> the sun is also a star </i> | nicola yoon</p>
               <p><i> this book is gay </i> | juno dawson </p>
-              <p><i> a modest proposal </i> | jonathan swift </p>
-              <p><i> beloved </i> | toni morrison</p>
-              <p><i> born a crime </i> | trevor noah</p>
               <p><i> a hunger artist </i> | franz kafka</p>
               <p><i> the catcher in the rye </i> | j.d. salinger </p>
               <p><i> the killer angels </i> | michael shaara </p>
@@ -169,54 +167,6 @@
 
   <!-- Include TextScramble if not already included -->
 <script src="assets/js/textScramble.js"></script>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    // The reading-page animation logic
-    const readingHeader = document.getElementById('readingHeader');
-    const goodreadsLine = document.getElementById('goodreadsLine');
-    const readingList = document.getElementById('readingList');
-
-    // Helper to scramble text in an element:
-    function scrambleText(el) {
-      el.style.opacity = '1';
-      const fx = new TextScramble(el);
-      fx.setText(el.textContent);
-    }
-
-    // Animate in sequence
-    let delay = 1000; // Start after 1s or 0 if you want immediate
-
-    // (a) Decrypt "reading"
-    setTimeout(() => {
-      scrambleText(readingHeader);
-    }, delay);
-    delay += 700; // wait 0.7s
-
-    // (b) Decrypt "add me on goodreads..."
-    setTimeout(() => {
-      scrambleText(goodreadsLine);
-    }, delay);
-    delay += 1000;
-
-    // (c) Slide in the reading list
-    setTimeout(() => {
-      readingList.style.opacity = '1';
-      readingList.style.transform = 'translateY(0)';
-    }, delay);
-    delay += 800;
-
-    // Slide in the side bar 
-    setTimeout(() => {
-      const sidebar = document.getElementById('sidebar');
-      sidebar.style.opacity = '1';
-      sidebar.classList.add('visible');
-    }, delay);
-    delay += 800;
-  });
-</script>
-
-  <script src="assets/js/textScramble.js"></script>
-  <script src="assets/js/scripts.js"></script>
+<script src="assets/js/scripts.js"></script>
 </body>
 </html>
