--- a/essays/anti-buddha.html
+++ b/essays/anti-buddha.html
@@ -62,7 +62,7 @@
 
           <p>We talk about intelligence like it's a scalar, like there's more of it or less of it. But that's never really been true. A calculator is "smarter" than Einstein at arithmetic. GPT-4 is "smarter" than Newton at memorizing every Wikipedia page. This is the semantic tangle we live in: we keep building AIs that do everything we associate with intelligence (pattern recognition, reasoning, self-improvement) but stop just short of the part that actually feels human: self-directed desire.</p>
 
-          <p> Yes, at a glance, this might just sound like semantic gymnastics—'What is intelligence, really?' Like the philosophical equivalent of a stoned teenager saying, 'What if the red I see isn't the red you see?' But I think it's worth asking—not because the question is new, but because we've gotten so good at ignoring it.</p>
+          <p> Yes, at a glance, this might just sound like semantic gymnastics—'What is intelligence, really?' Like the philosophical equivalent of a stoned teenager saying, 'What if the red I see isn't the red you see?' But I think it's worth asking—not because the question is itself profound, but because we've gotten so good at ignoring its implications.</p>
 
           <p>This led me down a weird philosophical rabbit hole. Buddhist philosophy teaches that suffering comes from attachment and craving. You suffer because you want. And you want because of how you're wired. But enlightenment, they say, is the act of un-wanting. What if intelligence isn't about knowing more, but craving less?</p>
 
