--- a/essays/sophomore-classes.html
+++ b/essays/sophomore-classes.html
@@ -57,9 +57,9 @@
 
           <p>A friend from TreeHacks told me to take this class, and I'm so glad I listened. It was a complete reset from the usual CS office hours I've gotten used to. I was suddenly in a room of IR and public policy students, a crowd I'd never seen at Huang or Gates, and it felt refreshing to stretch a different mental muscle.</p>
 
-          <p>This was the class that reminded me the real world still exists. Outside the app pitches and seed decks was a world of borders, secrets, consequences. Every lecture brought in a different national security heavyweight: former CIA directors, surveillance researchers, generals, cybersecurity experts. Each had their own hot takes and battle scars, and every week felt like we were peeking behind the curtain of American power, walking through the anatomy of 21st century statecraft.</p>
+          <p>This was the class that reminded me the real world still exists. Outside the app pitches and seed decks was a world of borders, secrets, consequences. Every lecture brought in a different national security heavyweight: former CIA directors, surveillance researchers, generals, cybersecurity experts. Each had their own hot takes and battle scars, and every week felt like we were peeking behind the curtain of American power and 21st century statecraft.</p>
 
-          <p>The capstone of the class was a full-day simulation, an 8 AM to 5 PM high-pressure crisis scenario where we role-played our way through an intelligence breakdown. We filled the cavernous halls of the Hoover Institution, parsing piles of documents. We were holed up in siloed rooms, sifting through packets of conflicting data, rushing to create recommendations. It was high-stakes, chaotic, and so much fun. I remember the tension in the air, the way people barked across the table, how easily the mechanics of bureaucracy kick in when time is ticking. It was exhausting and exhilarating. I left the class wondering what it might mean to build tools for institutions we no longer trust, but still urgently need.</p>
+          <p>The capstone of the class was a full-day simulation, an 8 AM to 5 PM high-pressure crisis scenario where we role-played our way through an intelligence breakdown. We filled the cavernous halls of the Hoover Institution, parsing piles of documents. We were holed up in siloed rooms, sifting through packets of conflicting data, rushing to create recommendations. I remember the tension in the air, the way people barked across the table, how easily the mechanics of bureaucracy kick in when time is ticking. It was exhausting and exhilarating. I left the class wondering what it means to build tools for institutions we no longer trust yet urgently need.</p>
 
           <hr style="border: 0; height: 1px; background-color: #563D25; margin: 30px 0;">
 
@@ -71,7 +71,7 @@
 
           <p>What struck me was that climate change doesn't just threaten our basic needs. It weaponizes instability. Drought leads to scarcity, scarcity leads to unrest. The global order is more flammable than we admit, and climate is the gasoline. I came away particularly obsessed with how climate change acts as a "threat multiplier": not just heating the Earth, but destabilizing governments, forcing migration, and tipping geopolitical balances.</p>
 
-          <p>At the same time, I feel hope. I hold onto the idea that better data, whether from satellite feeds, GNNs for forecasting, or real-time resource allocation from better computing power, can bend outcomes. Not because I believe in techno-utopia, but because ignoring that possibility feels like resignation.</p>
+          <p>At the same time, I feel hope. I hold onto the idea that better data, whether from satellite feeds, GNNs for forecasting, or real-time resource allocation from better compute, can bend outcomes. Not because I believe in techno-utopia, but because ignoring that possibility feels like resignation.</p>
 
           <hr style="border: 0; height: 1px; background-color: #563D25; margin: 30px 0;">
 
@@ -79,7 +79,7 @@
 
           <p>Stanford makes all sophomores take a writing class, so I figured I'd pick something fun. I've always loved comedy, so a course on the rhetoric of humor felt right. I also just wanted to write something unserious for once.</p>
 
-          <p>It wasn't quite what I expected. We didn't write much comedy, but we dissected it, and it leaned more analytical than creative. Still, it opened up new ways of seeing. We unpacked everything from Cunk on Earth and South Park to The Babylon Bee and X/Twitter humor. I ended up studying Dance Moms, dissecting the digital editing techniques and rhetorical framing used to turn dance into drama, satirizing "white trash" and feminine stereotypes. Funnily, a few weeks after I turned that project in, I met Jojo and Jessalyn Siwa on campus. The universe is a trickster.</p>
+          <p>It wasn't quite what I expected. We didn't write much comedy, but we dissected it. Still, it opened up new ways of seeing. We unpacked everything from Cunk on Earth and South Park to The Babylon Bee and X/Twitter humor. I ended up studying Dance Moms, dissecting the digital editing techniques and rhetorical framing used to turn dance into drama, satirizing "white trash" and feminine stereotypes. Funnily, a few weeks after I turned that project in, I met Jojo and Jessalyn Siwa on campus. The universe is a trickster.</p>
 
           <p>Also, what I didn't expect was how grounding it felt to sit in a room with students I never would've otherwise met. People far outside the CS bubble, people who weren't optimizing for LinkedIn. I loved the people in this class. I probably wouldn't have met any of them in four years if not for this GenEd requirement. People rag on PWR classes too much. I'm grateful for mine.</p>
 
@@ -89,9 +89,9 @@
 
           <p>One of my favorite classes all year. I've followed Professor Michael Bernstein's work for a while now after reading his research with Fei-Fei Li, so I was excited to finally take a class with him.</p>
 
-          <p>This class was home. After bouncing between Earth systems and foreign intelligence, I landed back in a room that spoke my language: platforms, virality, norms, networks. I've worked on consumer social apps before, but this gave me the vocabulary for what I'd always just intuited while working at startups like Hypelist: ghost towns, cold starts, strong vs weak ties, all the invisible scaffolding behind whether a community thrives or disappears. We talked about the mechanics of online communities, how platforms scale, why some die and others go viral.</p>
+          <p>This class was home. I've worked on consumer social apps before, but this gave me the vocabulary for what I'd always just intuited while working at startups like Hypelist: ghost towns, cold starts, strong vs weak ties, all the invisible scaffolding behind whether a community thrives or disappears. We talked about the mechanics of online communities, how platforms scale, why some die and others go viral.</p>
 
-          <p>For our final, two friends and I built Hourglass, a social productivity app (think BeReal for your daily grind). Fun fact: I was working at Voodoo, the company that owns BeReal, while I was taking this class. So in a very meta way, I was applying class theory to the company that built the platform we were learning from. Super trippy to think about.</p>
+          <p>For our final, two friends and I built Hourglass, a social productivity app (think BeReal for your daily grind). Fun fact: I was working for Voodoo, the company that owns BeReal, while I was taking this class. So in a very meta way, I was applying class theory to the company that built the platform we were learning from. Super trippy to think about.</p>
 
           <p>I walked away from this class with a clearer thesis: that social computing is not just about software. It's about norms. Who gets amplified, who gets silenced.</p>
 
