--- a/reading.html
+++ b/reading.html
@@ -53,6 +53,8 @@
               <br>
 
               <p><b> 2025 </b></p>
+              <p><i> abolish silicon valley: how to liberate technology from capitalism </i> | wendy liu </p>
+              <p><i> bhagavad gita </i> | translation by stephen mitchell</p>
               <p><i> chip war: the fight for the world's most critical technology </i> | chris miller</p>
               <p><i> hope for cynics: the surprising science of human goodness </i> | jamil zaki</p>
               <p><i> death's end </i> | cixin liu</p>
@@ -148,7 +150,7 @@
 
               <br>
 
-              <p><b> before 2019</b></p>
+              <p><b> pre 2019</b></p>
               <p><i> the grapes of wrath </i> | john steinbeck</p>
               <p><i> the lord of the flies </i> | william golding </p>
               <p><i> to kill a mockingbird </i> | harper lee </p>
